--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# dependencies    
+# it(node_module) ignore all node_module folder in this project
+node_modules                
 /.pnp
 .pnp.js
 
