--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "inotebook",
+  "homepage": "https://sumanta2.github.io/inotebook/login",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "concurrently": "^6.3.0",
     "dotenv": "^16.0.0",
+    "gh-pages": "^3.2.3",
     "lottie-web": "^5.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
@@ -20,6 +22,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
