36th change 404 page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inotebook",
-  "homepage": "https://sumanta2.github.io/inotebook/login",
+  "homepage": "https://sumanta2.github.io/inotebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
